--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h1>real-time weather map</h1>
+    <h1>Real-time weather map</h1>
     <iframe src="https://embed.windy.com/?lat=23.429&lon=-102.555&detailLat=23.429&detailLon=-102.555&width=650&height=450&zoom=5&level=surface&overlay=temperature&product=ecmwf" frameborder="0"></iframe>
 </body>
 <script>
